# midas_receiver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: Config.cmake.in
config/: config.json
deprecated/: MidasReceiver.cpp  MidasReceiver.h  MidasReceiverManager.cpp  MidasReceiverManager.h  main.cpp
include/: MidasEventReceiver.h  MidasReceiver.h  ReceivedMidasData.h  ReceivedMidasEvent.h  ReceivedMidasMessage.h  ReceivedMidasTransition.h  Receiver.h
scripts/: build.sh  install.sh  run.sh
scripts/environment/: .env
source/: MidasEventReceiver.cpp  MidasReceiver.cpp  Receiver.cpp  main.cpp
src/: MidasReceiver.cpp  main.cpp  receiver_test.cpp
